added discord server link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Adriana Picoral" />
+<meta name="author" content="Organized by Adriana Picoral" />
 
 
 <title>Cultural Competence Readings</title>
@@ -406,19 +406,20 @@ summary {
 
 
 <h1 class="title toc-ignore">Cultural Competence Readings</h1>
-<h4 class="author">Adriana Picoral</h4>
-<h4 class="date">11/3/2020</h4>
+<h4 class="author">Organized by Adriana Picoral</h4>
+<h4 class="date">November 2020 to July 2021</h4>
 
 </div>
 
 <div id="TOC">
 <ul>
-<li><a href="#reading-schedule">Reading Schedule</a></li>
+<li><a href="#reading-schedule"><span class="toc-section-number">1</span> Reading Schedule</a></li>
+<li><a href="#discussion-platform"><span class="toc-section-number">2</span> Discussion Platform</a></li>
 </ul>
 </div>
 
 <div id="reading-schedule" class="section level1">
-<h1>Reading Schedule</h1>
+<h1><span class="header-section-number">1</span> Reading Schedule</h1>
 <table>
 <colgroup>
 <col width="33%"></col>
@@ -475,6 +476,10 @@ summary {
 </tr>
 </tbody>
 </table>
+</div>
+<div id="discussion-platform" class="section level1">
+<h1><span class="header-section-number">2</span> Discussion Platform</h1>
+<p>I created a <a href="https://discord.gg/hAQvkZfetY">discord server</a> with individual <em>text channels</em> for each book. I will be adding my notes by chapter in each text channel/book – this way you can just read my notes, react to my notes, and add your own notes, comments and questions. You can also follow your own reading schedule, because all discussion is asynchronous.</p>
 </div>
 
 
