added some Discord help

--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@ summary {
 <ul>
 <li><a href="#reading-schedule"><span class="toc-section-number">1</span> Reading Schedule</a></li>
 <li><a href="#discussion-platform"><span class="toc-section-number">2</span> Discussion Platform</a></li>
+<li><a href="#how-to-use-discord"><span class="toc-section-number">3</span> How to use Discord</a></li>
 </ul>
 </div>
 
@@ -480,6 +481,11 @@ summary {
 <div id="discussion-platform" class="section level1">
 <h1><span class="header-section-number">2</span> Discussion Platform</h1>
 <p>I created a <a href="https://discord.gg/hAQvkZfetY">discord server</a> with individual <em>text channels</em> for each book. I will be adding my notes by chapter in each text channel/book – this way you can just read my notes, react to my notes, and add your own notes, comments and questions. You can also follow your own reading schedule, because all discussion is asynchronous.</p>
+</div>
+<div id="how-to-use-discord" class="section level1">
+<h1><span class="header-section-number">3</span> How to use Discord</h1>
+<p>Discord is a platform for chatting or holding discussions. It’s very similar to other platforms like Microsoft Teams and Slack. A <code>server</code> is like a community. I created a server (i.e., a community) called <code>DEI Reading Group</code> with a text channel for each reading. Each community (or server) has multiple channels to keep discussions organized. I decided to organize the discussion by book, since I think that’s the most natural way to discuss these readings. Discord is free.</p>
+<p>Discord makes use of markdown for text formatting. You don’t have to format your text or do anything fancy, but in case you are interested, here’s <a href="https://gist.github.com/matthewzring/9f7bbfd102003963f9be7dbcf7d40e51">a handy guide on markdown on Discord</a></p>
 </div>
 
 
