change title of third column in reading schedule

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ summary {
 <tr class="header">
 <th>Book</th>
 <th>Where to Find</th>
-<th>Discussion Date</th>
+<th>Discussion Start Date</th>
 </tr>
 </thead>
 <tbody>
